2009-02-17  John W. Eaton  <jwe@octave.org>

	* plot/plotyy.m: Handle case of existing figure with no axes.

2009-02-16  John W. Eaton  <jwe@octave.org>

	* help/__makeinfo__.m: Rename from help/makeinfo.m.  Delete tmp file.
	* help/Makefile.in (SOURCES): Add __makeinfo__.m, delete makeinfo.m.
	* help/get_first_help_sentence.m, help/help.m, help/lookfor.m,
	help/print_usage.m: Call __makeinfo__ instead of makeinfo.
	* help/__strip_html_tags__.m, help/__additional_help_message__.m:
	Doc fix.

2009-02-16  Ben Abbott <bpabbott@mac.com>

	* plot/shading.m: No new figure windows for the demos.
	* plot/surfl.m: Clear figure before running demos.

2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/expm.m: Fix invalid unscaling.
	* help/which.m: Do not add "function" here.
	* optimization/fsolve.m: Update comments.

2009-02-16  John W. Eaton  <jwe@octave.org>

	* help/help.m: Shorten default help text.

2009-02-15  John W. Eaton  <jwe@octave.org>

	* help/doc.m, help/help.m, help/lookfor.m, help/type.m,
	help/which.m, image/colormap.m, miscellaneous/delete.m,
	miscellaneous/dir.m, miscellaneous/edit.m,
	miscellaneous/intwarning.m, miscellaneous/ls.m,
	miscellaneous/mex.m, miscellaneous/mkoctfile.m,
	miscellaneous/run.m, miscellaneous/what.m, path/savepath.m,
	pkg/pkg.m, plot/axis.m, plot/box.m, plot/caxis.m, plot/cla.m,
	plot/close.m, plot/colorbar.m, plot/grid.m, plot/hidden.m,
	plot/hold.m, plot/legend.m, plot/orient.m, plot/print.m,
	plot/shading.m, plot/title.m, plot/xlabel.m, plot/ylabel.m,
	plot/zlabel.m, testfun/demo.m, testfun/example.m, testfun/fail.m,
	testfun/rundemos.m, testfun/test.m:
	Delete "PKG_ADD: mark_as_command" directive.

	* scripts/edit.m: Avoid command-style function call syntax when
	assigning results in tests.

	* deprecated/mark_as_rawcommand.m, deprecated/unmark_rawcommand.m,
	deprecated/israwcommand.m, deprecated/mark_as_command.m,
	deprecated/unmark_command.m, deprecated/iscommand.m:
	New functions.